--- a/.gitconfig
+++ b/.gitconfig
@@ -1,23 +1,10 @@
-[core]
-	editor = \"C:\\Users\\SauloJustiniano\\AppData\\Local\\Programs\\Microsoft VS Code\\bin\\code\" --wait
-
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
-
-[user]
-	name = Saulo Justiniano
-	email = saulojustiniano1@gmail.com
-
 [alias]
 ci = commit
-sts = status
+st = status
 co = checkout
 cm = checkout master
 cb = checkout -b
-st = status -sb
+sts = status -sb
 sf = show --name-only
 lg = log --pretty=format:'%Cred%h%Creset %C(bold)%cr%Creset %Cgreen<%an>%Creset %s' --max-count=30
 incoming = !(git fetch --quiet && git log --pretty=format:'%C(yellow)%h %C(white)- %C(red)%an %C(white)- %C(cyan)%d%Creset %s %C(white)- %ar%Creset' ..@{u})
