--- a/.gitconfig
+++ b/.gitconfig
@@ -6,9 +6,29 @@ cm = checkout master
 cb = checkout -b
 sts = status -sb
 sf = show --name-only
+ca = commit -a
+br = branch
+ba = branch -a
+bm = branch --merged
+bn = branch --no-merged
+d = diff
+a = "!git status --short | peco | awk '{print $2}' | xargs git add"
+df = "!git hist | peco | awk '{print $2}' | xargs -I {} git diff {}^ {}"
+ps = "!git push origin $(git rev-parse --abbrev-ref HEAD)"
+pl = "!git pull origin $(git rev-parse --abbrev-ref HEAD)"
 lg = log --pretty=format:'%Cred%h%Creset %C(bold)%cr%Creset %Cgreen<%an>%Creset %s' --max-count=30
 incoming = !(git fetch --quiet && git log --pretty=format:'%C(yellow)%h %C(white)- %C(red)%an %C(white)- %C(cyan)%d%Creset %s %C(white)- %ar%Creset' ..@{u})
 outgoing = !(git fetch --quiet && git log --pretty=format:'%C(yellow)%h %C(white)- %C(red)%an %C(white)- %C(cyan)%d%Creset %s %C(white)- %ar%Creset' @{u}..)
 unstage = reset HEAD --
 undo = checkout --
 rollback = reset --soft HEAD~1
+hist = log --pretty=format:\"%Cgreen%h %Creset%cd %Cblue[%cn] %Creset%s%C(yellow)%d%C(reset)\" --graph --date=relative --decorate --all
+llog = log --graph --name-status --pretty=format:\"%C(red)%h %C(reset)(%cd) %C(green)%an %Creset%s %C(yellow)%d%Creset\" --date=relative
+open = "!hub browse"
+type = cat-file -t
+dump = cat-file -p
+find = "!f() { git log --pretty=format:\"%h %cd [%cn] %s%d\" --date=relative -S'pretty' -S\"$@\" | peco | awk '{print $1}' | xargs -I {} git diff {}^ {}; }; f"
+# edit conflicted file on merge
+edit-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; vim `f`"
+# add conflicted file on merge
+add-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; git add `f`"
